fix overflow issue and give border radius to project thumbnails

--- a/portfolio/sass/base/_background.sass
+++ b/portfolio/sass/base/_background.sass
@@ -14,10 +14,10 @@
   color: #3385FF
 
 .skyblue
-  background-color: #d9f5ff
+  background-color: #e1edfe
 
 .title_skyblue
-  color: #51A0BC
+  color: #0066ff
 
 .orange
   background-color: #ffe5e9
@@ -26,7 +26,7 @@
   color: #FF5572
 
 .purple
-  background-color: #dce3ff
+  background-color: #e5eafe
 
 .title_purple
   color: #4E61FF
