--- a/portfolio/sass/pages/_poptip_questions.sass
+++ b/portfolio/sass/pages/_poptip_questions.sass
@@ -47,7 +47,7 @@ img
 
 .section_purple
   height: auto
-  background-color: #dce3ff
+  background-color: #e5eafe
 
 
 .section_dark
