--- a/portfolio/sass/pages/_work.sass
+++ b/portfolio/sass/pages/_work.sass
@@ -30,9 +30,10 @@
 .projectpreview
   width: 48%
   height: auto
-  padding:
+  margin:
     top: 4%
   overflow: hidden
+  border-radius: 4px
 @media screen and (max-width: 500px)
   .projectpreview
     width: 100%
